# AR_Catan

./: .gitignore  CMakeLists.txt  Config.h  ReadMe.md  camera_calibration_setting.xml  main.cpp
AR_Objs/: ARObject.h  ARObjectFactory.h
AR_Objs/Aruco/: ArucoObject.h  HomographyObj.h
AR_Objs/Aruco/DevCards/: DevelopmentCard.h  KnightCard.h  MonopolyCard.h  RoadBuilding.h  VictoryPointCard.h  YearOfPlentyCard.h
AR_Objs/Aruco/GamePieces/: GamePiece.h
AR_Objs/Aruco/GamePieces/NonPlayerPieces/: NonPlayerPiece.h  Robber.h
AR_Objs/Aruco/GamePieces/PlayerPieces/: City.h  PlayerPiece.h  Road.h  Settlement.h
AR_Objs/Aruco/ResCards/: BrickResCard.h  OreResCard.h  ResourceCard.h  WheatResCard.h  WoodResCard.h  WoolResCard.h
AR_Objs/Aruco/Tiles/: BrickHex.h  HexTile.h  OreHex.h  WheatHex.h  WoodHex.h  WoolHex.h
AR_Objs/Rendering/: ModelData.h  ModelLoader.cpp  ModelLoader.h  OpenCVRenderStrategy.h  OpenGLRenderStrategy.cpp  OpenGLRenderStrategy.h  RenderStrategy.cpp  RenderStrategy.h
AR_Objs/Rendering/Models/: brick.mtl  ore.mtl  wheat.mtl  wood.mtl  wool.mtl
Controller/: Controller.cpp  Controller.h  PlayerInfoBuilder.h
Controller/Commands/: Command.h  DecrementScoreCommand.h  IncrementScoreCommand.h  UpdateUsernameCommand.h
Controller/Processing/: ProcessingThread.cpp  ProcessingThread.h
Controller/Video/: CameraInput.h  NetworkInput.h  RPInput.h  RTSPInput.h  VideoCaptureThread.h  VideoInput.h
Model/: GameModel.cpp  GameModel.h  InitARObjects.cpp  InitARObjects.h  MessageEmitter.h  Player.cpp  Player.h
Model/Database/: DatabaseManager.cpp  DatabaseManager.h  PlayerService.cpp  PlayerService.h
Styles/: stylesheet.qss
Util/: calibrate.cpp  genMarkers.cpp  generateBoard.cpp
Video/: VideoCaptureThread.h  VideoInput.h
View/: GUIView.cpp  GUIView.h
